{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 26,
  "lineage": "84c1e373-41b7-c986-38ac-0a66f24d322d",
  "resources": [
    {
      "module": "module.EC2-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:security-group/sg-000b5ff2dfd93710e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000b5ff2dfd93710e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from anywhere",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud_clan_ec220230328105849808800000004",
            "name_prefix": "cloud_clan_ec2",
            "owner_id": "130692157152",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:130692157152:loadbalancer/app/tf-lb-20230328105913035200000007/ed75cfe11d75050f",
            "arn_suffix": "app/tf-lb-20230328105913035200000007/ed75cfe11d75050f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230328105913035200000007-819204288.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:130692157152:loadbalancer/app/tf-lb-20230328105913035200000007/ed75cfe11d75050f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230328105913035200000007",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02009b2ea66bdd016"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03fa58ca6f46b4159"
              },
              {
                "subnet_id": "subnet-08ce00f96b6c89444"
              }
            ],
            "subnets": [
              "subnet-03fa58ca6f46b4159",
              "subnet-08ce00f96b6c89444"
            ],
            "tags": {
              "Name": "Cloud-clan-AlB"
            },
            "tags_all": {
              "Name": "Cloud-clan-AlB"
            },
            "vpc_id": "vpc-0cb15ad53d3b8274c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb-sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_subnet.public_subnet-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:130692157152:listener/app/tf-lb-20230328105913035200000007/ed75cfe11d75050f/68c2beafe72c99dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:130692157152:targetgroup/Cloud-clan-TG/353655a3e8044ee4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:130692157152:listener/app/tf-lb-20230328105913035200000007/ed75cfe11d75050f/68c2beafe72c99dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:130692157152:loadbalancer/app/tf-lb-20230328105913035200000007/ed75cfe11d75050f",
            "port": 8501,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-sg.aws_security_group.alb_sg",
            "module.alb.aws_lb.ALB",
            "module.alb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_subnet.public_subnet-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:130692157152:targetgroup/Cloud-clan-TG/353655a3e8044ee4",
            "arn_suffix": "targetgroup/Cloud-clan-TG/353655a3e8044ee4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:130692157152:targetgroup/Cloud-clan-TG/353655a3e8044ee4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Cloud-clan-TG",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Cloud-clan-TG"
            },
            "tags_all": {
              "Name": "Cloud-clan-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "dependencies": [
            "module.alb-sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:security-group/sg-02009b2ea66bdd016",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02009b2ea66bdd016",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from anywhere",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs access from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud_clan_SG20230328105849791100000003",
            "name_prefix": "cloud_clan_SG",
            "owner_id": "130692157152",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f8880652a429b7e",
            "domain": "vpc",
            "id": "eipalloc-06f8880652a429b7e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-168-86-94.compute-1.amazonaws.com",
            "public_ip": "35.168.86.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:internet-gateway/igw-05c59752902520ba5",
            "id": "igw-05c59752902520ba5",
            "owner_id": "130692157152",
            "tags": {
              "Name": "Cloud_clan_main-igw",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "Cloud_clan_main-igw",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f8880652a429b7e",
            "connectivity_type": "public",
            "id": "nat-02fe223c2b3d14efc",
            "network_interface_id": "eni-0ed21f8c2bc4e390b",
            "private_ip": "10.0.10.113",
            "public_ip": "35.168.86.94",
            "subnet_id": "subnet-08ce00f96b6c89444",
            "tags": {
              "Name": "Cloud_clan_NAT",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "Cloud_clan_NAT",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:route-table/rtb-0bab5cef8a833880c",
            "id": "rtb-0bab5cef8a833880c",
            "owner_id": "130692157152",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02fe223c2b3d14efc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cloud_clan_route_table-private",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "Cloud_clan_route_table-private",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:route-table/rtb-072f9335bc1f6b25f",
            "id": "rtb-072f9335bc1f6b25f",
            "owner_id": "130692157152",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c59752902520ba5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cloud_clan_route_table-public",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "Cloud_clan_route_table-public",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063722689c2fff5bf",
            "route_table_id": "rtb-0bab5cef8a833880c",
            "subnet_id": "subnet-0dac3a321b19dccb6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_table-private",
            "module.vpc.aws_subnet.private_subnet-1a",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing_table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d2b2a2fcf9cc6c1",
            "route_table_id": "rtb-0bab5cef8a833880c",
            "subnet_id": "subnet-024a3794cbb07af4f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_table-private",
            "module.vpc.aws_subnet.private_subnet-1b",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routing_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053e6dae99c8956ca",
            "route_table_id": "rtb-072f9335bc1f6b25f",
            "subnet_id": "subnet-08ce00f96b6c89444"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table-public",
            "module.vpc.aws_subnet.public_subnet-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routing_table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b39d2909a75125b0",
            "route_table_id": "rtb-072f9335bc1f6b25f",
            "subnet_id": "subnet-03fa58ca6f46b4159"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table-public",
            "module.vpc.aws_subnet.public_subnet-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:subnet/subnet-0dac3a321b19dccb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dac3a321b19dccb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130692157152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1a",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "private_subnet-1a",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:subnet/subnet-024a3794cbb07af4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024a3794cbb07af4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130692157152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1b",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "private_subnet-1b",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:subnet/subnet-08ce00f96b6c89444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ce00f96b6c89444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130692157152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1a",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "public_subnet-1a",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:subnet/subnet-03fa58ca6f46b4159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa58ca6f46b4159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130692157152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1b",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "public_subnet-1b",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "vpc_id": "vpc-0cb15ad53d3b8274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130692157152:vpc/vpc-0cb15ad53d3b8274c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d183a9a98252ea9c",
            "default_route_table_id": "rtb-06fc9565b8f0f7542",
            "default_security_group_id": "sg-0206b3a6e8533b29c",
            "dhcp_options_id": "dopt-0678744fa9f64b906",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb15ad53d3b8274c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06fc9565b8f0f7542",
            "owner_id": "130692157152",
            "tags": {
              "Name": "main-vpc",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            },
            "tags_all": {
              "Name": "main-vpc",
              "Terraform": "True",
              "createdby": "Cloud_clan"
            }
          }
        }
      ]
    }
  ]
}